{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Player",
            "id": "c1b2ef0d-0cea-46df-800e-f427599bf442",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "62640ec9-0f1d-41c1-8a5d-7c2f90a283f5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b34f3046-668e-498d-9020-acf25d33543c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownJump",
                    "type": "Button",
                    "id": "e8ddc12c-245a-45ea-8ad4-f53467025ead",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "13e40370-2e01-46de-98fe-f6e5a8789bb2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IsJumping",
                    "type": "Value",
                    "id": "a0ccdf9f-b316-4eab-b605-6d33a5d8e39b",
                    "expectedControlType": "Digital",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attract",
                    "type": "Button",
                    "id": "37a9f284-6748-42ea-ad79-baa8dfeb1cf2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dichotomy",
                    "type": "Button",
                    "id": "d9b6e352-15ff-4098-a581-f0e86f4da05b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Accerlerate",
                    "type": "Button",
                    "id": "e7fde020-92d8-472c-a0ed-f6e100ebdf6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "1cb90408-dbb2-4c26-ba33-dbcaa0c19ef4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "3e7a88d6-f744-497d-93c1-45e7c1e03395",
                    "path": "<Keyboard>/#(D)",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "165ed73f-1560-4eb4-94de-0d4759c46d75",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow",
                    "id": "8165f092-b68e-4b53-8ee2-ea06a7d07780",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "210517e5-c567-4905-b847-52133563043d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f9f37fae-6026-4fa3-b767-2ef399aa7144",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "64da3c95-dc37-43ca-845d-6f5be6216450",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc9105bd-4018-4ea3-aa18-e155b2c3647f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "DownArrow",
                    "id": "d566ffaa-9a62-4604-b22e-a4017a1b313e",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownJump",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "96311976-f912-43b1-a8c1-7fda341d4d92",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "DownJump",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button",
                    "id": "06367ac3-78c7-4761-8531-782047188c49",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "DownJump",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "S",
                    "id": "70fff673-a0e1-44f0-9b4a-200766c56b1e",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownJump",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "4f57dbbd-ebaa-41e3-b49a-d47a0e46a505",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "DownJump",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button",
                    "id": "daef7511-c93f-4c4c-be85-11ffea83c9d8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "DownJump",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "482ff2e0-bd4e-44e7-bf6c-0cdec81cb9aa",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fc92d4f-8864-483a-a660-d26bee169534",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "IsJumping",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a06f3f60-8ca6-47ba-a7a6-8cf77f593fb3",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Attract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cbf35ebf-3d03-4a74-aed8-4c060130a8ed",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "IsJumping",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c89f081-f0bb-4a7f-a0fc-4bc014f2445d",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dichotomy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2923d55a-9a71-4559-a383-08cb746497a8",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accerlerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}